* New configuration "Warnings" to enable/disable individual warnings that can
  be identified by a W0XX prefix in the logs.
  These warnings have been added:
  - W001_TagsBeingReadFromStorage
  - W002_InconsistentDicomTagsInDb
* C-Find and QIDO-RS can now return the InstanceAvailability tag.  Value is 
  always "ONLINE"
* Improved decoding of US Images with Implicit VR.

REST API
--------

* API version upgraded to 17
* new options in tools/find:
  - "RequestedTags" (to use together with "Expand": true) contains a list of tags 
    that you'll receive in the "RequestedTags" field in the answers.  These tags
    may be tags from the MainDicomTags in DB, from the DICOM file or 'computed'
    like ModalitiesInStudy.  Check the new configuration "ExtraMainDicomTags" and
    "Warnings" to optimize your queries.
* new query argument "requestedTags" in all API routes listing resources:
  - /patients, /patients/../studies, /patients/../series, /patients/../instances
  - /studies, /studies/../series, /studies/../instances
  - /series, /series/../instances
  - /instances
* new field "MainDicomTags" in the /system route response to list the tags that
  are saved in DB


Version 1.10.1 (2022-03-23)
===========================

General
-------

* Improved DICOM authorization checks when multiple modalities are
  declared with the same AET.

Plugins
-------

* New function in the SDK: "OrthancPluginRegisterWebDavCollection()"
  to map a WebDAV virtual filesystem into the REST API of Orthanc.

Documentation
-------------

* Removed the "LimitJobs" configuration that is not used anymore since
  the new JobEngine has been introduced (in Orthanc 1.4.0). The
  pending list of jobs is unlimited.


Version 1.10.0 (2022-02-23)
===========================

General
-------

* New configuration "DicomAlwaysAllowFindWorklist" to complement the existing
  "DicomAlwaysAllowFind" configuration.  "DicomAlwaysAllowFind" applies now 