@@ -263,12 +263,6 @@ namespace Orthanc
                                       DicomInstanceToStore& dicom,
                                       StoreInstanceMode mode);
 
-    void ApplyInternal(ILookupVisitor& visitor,
-                       const DatabaseLookup& lookup,
-                       ResourceType queryLevel,
-                       size_t since,
-                       size_t limit);
-
     void PublishDicomCacheMetrics();
 
     // This method must only be called from "ServerIndex"!
@@ -550,7 +544,7 @@ namespace Orthanc
                         const std::string& publicId,
                         const DicomMap& mainDicomTags,    // optional: the main dicom tags for the resource (if already available)
                         const std::string& instanceId,    // optional: the id of an instance for the resource
-                         const Json::Value* dicomAsJson,  // optional: the dicom-as-json for the resource
+                        const Json::Value* dicomAsJson,   // optional: the dicom-as-json for the resource
                         ResourceType level,
                         DicomToJsonFormat format,
                         const std::set<DicomTag>& requestedTags);
@@ -559,7 +553,7 @@ namespace Orthanc
                         const std::string& publicId,
                         const DicomMap& mainDicomTags,    // optional: the main dicom tags for the resource (if already available)
                         const std::string& instanceId,    // optional: the id of an instance for the resource
-                         const Json::Value* dicomAsJson,  // optional: the dicom-as-json for the resource
+                        const Json::Value* dicomAsJson,   // optional: the dicom-as-json for the resource
                         ResourceType level,
                         const std::set<DicomTag>& requestedTags,
                         ExpandResourceDbFlags expandFlags);
